deleted files and added

--- a/.htaccess
+++ b/.htaccess
@@ -96,6 +96,9 @@ RewriteRule ^process_adminlogin$ process_adminlogin.php [NC]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^process_adminregister$ process_adminregister.php [NC]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^admin$ admin.php [NC]
 
 # Redirects .php to without .php
 #RewriteEngine On
