--- a/.htaccess
+++ b/.htaccess
@@ -121,6 +121,10 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^refund_policy$ help_page.php [NC]
 
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^process_adminItemEdit$ process_adminItemEdit.php [NC]
+
 # Redirects .php to without .php
 #RewriteEngine On
 #RewriteBase /
