help page  updates and htaccess and save admin

--- a/.htaccess
+++ b/.htaccess
@@ -119,6 +119,10 @@ RewriteRule ^privacypolicy$ help_page.php [NC]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^returnpolicy$ help_page.php [NC]
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^refundpolicy$ help_page.php [NC]
 
 RewriteCond %{REQUEST_FILENAME} !-f
