added eric's changes

--- a/.htaccess
+++ b/.htaccess
@@ -140,6 +140,14 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^process_adminItemEdit$ process_adminItemEdit.php [NC]
 
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^process_account$ process_account.php [NC]
+
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^account$ account.php [NC]
+
 # Redirects .php to without .php
 #RewriteEngine On
 #RewriteBase /
