--- a/.htaccess
+++ b/.htaccess
@@ -148,6 +148,10 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^account$ account.php [NC]
 
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^process_adminUserEdit$ process_adminUserEdit.php [NC]
+
 # Redirects .php to without .php
 #RewriteEngine On
 #RewriteBase /
